# wandxml

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
cmake/: wandxmlConfig.cmake.in
example/: CMakeLists.txt
example/rdparse/: CMakeLists.txt  main.cc  test.xml
wandxml/: CMakeLists.txt  basedefs.h  dom.cc  dom.h  except.cc  except.h  except_base.cc  except_base.h  parser.cc  parser.h
